# translation-inference

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  testing.py
files/: blob
frontend/: app.py  main.py
frontend/routes/: audio_route.py  language_route.py  mode_options.py  process_audio.py  process_text.py  text_route.py  translation_route.py
output/: audio_request.wav.text  text_request.txt.text
templates/: index.html  main.html
templates/components/: audioInput.html  audioOutput.html  audioPlayer.html  dropZone.html  inputContent.html  inputModeDropdown.html  outputContent.html  outputModeDropdown.html  recordingContainer.html  sourceLanguageDropdown.html  sourceTargetFlipper.html  startRecording.html  startRecordingButton.html  targetLanguageDropdown.html  textInput.html  textOutput.html  translateButton.html
templates/shared/: _base.html
tests/: test_audio_chat.py
