[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Richard <bakobiibizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
requests = "^2.32.3"
numpy = "^2.0.0"
torch = "^2.3.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
